--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 	<h2>Welcome to shopping days!</h2>
 
 	<!-- Image -->
-	<img src="https://www.hks.harvard.edu/sites/default/files/images/paragraph_footer/harvard-kennedy-school-logo_1.png"/>
+	<img src="https://www.hupd.harvard.edu/sites/hwpi.harvard.edu/files/styles/os_files_large/public/hupd/files/community_engagement_dog_picutre_2.jpg?m=1669051922&itok=CpVIRub_"/>
 
 	<!-- Paragraphs of text -->
 	<p>You should take this course whether or not you plan to code for a living.</p>
